--- a/package.json
+++ b/package.json
@@ -15,18 +15,22 @@
   "version": "1.0.0",
   "main": "index.js",
   "devDependencies": {
+    "@types/supertest": "^6.0.2",
+    "@vitest/coverage-istanbul": "^2.1.8",
     "autoprefixer": "^10.4.20",
+    "mongodb-memory-server": "^10.1.2",
     "nodemon": "^3.1.7",
     "postcss": "^8.4.49",
     "prettier": "^3.4.2",
     "prettier-plugin-ejs": "^1.0.3",
     "prettier-plugin-tailwindcss": "^0.6.9",
+    "supertest": "^7.0.0",
     "tailwindcss": "^3.4.16",
+    "vitest": "^2.1.8",
     "zod": "^3.23.8"
   },
   "scripts": {
-    "start": "nodemon index.js",
-    "dev": "nodemon app.js"
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
