--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "dependencies": {
+    "@faker-js/faker": "^9.3.0",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "express-async-handler": "^1.2.0",
     "handlebars": "^4.7.8",
     "hbs": "^4.2.0",
     "mongoose": "^8.8.4",
