--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "mongoose": "^8.8.2",
     "nodemon": "^3.1.7",
     "sass": "^1.81.0",
+    "slugify": "^1.6.6",
     "uuid": "^11.0.3"
   },
   "name": "online-news",
@@ -26,7 +27,7 @@
   "scripts": {
     "start": "nodemon index.js",
     "dev": "nodemon app.js",
-    "build:css": "tailwindcss -o public/css/tailwind.css --minify --watch" 
+    "build:css": "tailwindcss -o public/css/tailwind.css --watch"
   },
   "keywords": [],
   "author": "",
