login and register functions v1

--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-async-handler": "^1.2.0",
+    "express-session": "^1.18.1",
     "handlebars": "^4.7.8",
     "hbs": "^4.2.0",
     "mongoose": "^8.8.4",
+    "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
+    "passport": "^0.7.0",
     "sass": "^1.82.0",
     "uuid": "^11.0.3"
   },
@@ -33,7 +36,9 @@
     "zod": "^3.23.8"
   },
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "dev": "nodemon app.js",
+    "build:css": "tailwindcss -o public/css/tailwind.css --minify --watch"
   },
   "keywords": [],
   "author": "",
