--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "devDependencies": {
+    "@testing-library/dom": "^10.4.0",
     "@types/supertest": "^6.0.2",
     "@vitest/coverage-istanbul": "^2.1.8",
     "autoprefixer": "^10.4.20",
+    "jsdom": "^25.0.1",
     "mongodb-memory-server": "^10.1.2",
     "nodemon": "^3.1.7",
     "postcss": "^8.4.49",
