--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@faker-js/faker": "^9.3.0",
+    "@types/express-session": "^1.18.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
@@ -9,11 +10,11 @@
     "express-session": "^1.18.1",
     "handlebars": "^4.7.8",
     "hbs": "^4.2.0",
-    "mongoose": "^8.8.4",
+    "mongoose": "^8.9.0",
     "nodemailer": "^6.9.16",
-    "nodemon": "^3.1.7",
+    "nodemon": "^3.1.9",
     "passport": "^0.7.0",
-    "sass": "^1.82.0",
+    "sass": "^1.83.0",
     "slugify": "^1.6.6",
     "uuid": "^11.0.3"
   },
@@ -36,7 +37,7 @@
     "supertest": "^7.0.0",
     "tailwindcss": "^3.4.16",
     "vitest": "^2.1.8",
-    "zod": "^3.23.8"
+    "zod": "^3.24.1"
   },
   "scripts": {
     "start": "nodemon index.js",
