--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "handlebars": "^4.7.8",
     "hbs": "^4.2.0",
     "mongoose": "^8.9.0",
+    "morgan": "^1.10.0",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.9",
     "passport": "^0.7.0",
