--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@aws-sdk/client-s3": "^3.713.0",
     "@faker-js/faker": "^9.3.0",
     "bcryptjs": "^2.4.3",
+    "csv-parse": "^5.6.0",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
@@ -18,6 +19,7 @@
     "memorystore": "^1.6.7",
     "mongoose": "^8.9.0",
     "morgan": "^1.10.0",
+    "multer": "1.4.5-lts.1",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.9",
     "passport": "^0.7.0",
