--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.9",
     "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth": "^2.0.0",
+    "passport-local": "^1.0.0",
     "sass": "^1.83.0",
     "slugify": "^1.6.6",
     "uuid": "^11.0.3"
