--- a/env.example
+++ b/env.example
@@ -2,6 +2,13 @@ SMTP_HOST=
 SMTP_USER=
 SMTP_PASS=
 
-MONGO_URL= 
-MONGO_URL= 
-PORT=
+MONGO_URL = 
+PORT =
+
+S3_CLIENT = 
+S3_SECRET = 
+S3_HOST =
+S3_PERM = 
+
+GMAIL_ID=
+GMAIL_SECRET=
