--- a/package.json
+++ b/package.json
@@ -45,11 +45,12 @@
     "zod": "^3.24.1"
   },
   "scripts": {
-    "start": "node --experimental-loader=extensionless index.js",
-    "build:css": "tailwindcss -o public/css/tailwind.css --watch",
-    "format": "prettier --w src tests routes queries model controllers config app.js index.js",
-    "start:babel": "nodemon --exec npx babel-node index.js"
-  },
+  "start": "node --experimental-loader=extensionless index.js",
+  "build:css": "tailwindcss -o public/css/tailwind.css --watch",
+  "format": "prettier --w src routes queries model controllers config app.js index.js",
+  "start:babel": "nodemon --exec npx babel-node index.js",
+  "dev": "concurrently \"npm run build:css\" \"npm run start:babel\""
+},
   "keywords": [],
   "author": "",
   "license": "ISC"
