--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth": "^2.0.0",
+    "passport-google-oidc": "^0.1.0",
     "passport-local": "^1.0.0",
     "sass": "^1.83.0",
     "slugify": "^1.6.6",
