--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
   "scripts": {
     "dev": "nodemon --exec npx babel-node index.js",
     "start": "node --experimental-loader=extensionless index.js",
-    "build:css": "tailwindcss -i src/tailwind.css -o public/css/tailwind.css --watch",
+    "build:css": "tailwindcss -i src/tailwind.css -o public/css/tailwind.css --watch --minify",
     "format": "prettier --w src routes queries model controllers config app.js index.js",
     "start:babel": "nodemon --exec npx babel-node index.js"
   },
