--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "passport-google-oauth": "^2.0.0",
     "passport-google-oidc": "^0.1.0",
     "passport-local": "^1.0.0",
+    "pdf-lib": "^1.17.1",
     "sass": "^1.83.0",
     "slugify": "^1.6.6",
     "uuid": "^11.0.3"
